nettoyage bdd et migrations

--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=5e7ea57ef06edc03108c544e544fafb1
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/project?serverVersion=10.4.18-MariaDB"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/artd1tps?serverVersion=10.4.18-MariaDB"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
