--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,8 @@
 security:
     encoders:
-        App\Entity\Security:
+        App\Entity\Security: # Encoder d'une premiére tentative conservé pour ne pas rentrer en conflit avec le reste du code
             algorithm: auto
-        App\Entity\Membre:
+        App\Entity\Membre: # Encoder fonctionel
             algorithm: auto
 
 
@@ -39,5 +39,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        #- { path: ^/admin, roles: ROLE_ADMIN }
+        #- { path: ^/profile, roles: ROLE_USER }
+        #- { path: ^/admin/QQCHOSECOMMEoeuvres, roles: ROLE_ARTISTE }
+        #- { path: ^/profile, roles: IS_AUTHENTIFICATED_FULLY }
+
+    #role_hierarchy:
+#ROLE_ADMIN: ROLE_ARTISTE, ROLE_MEMBRE
