--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,4 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     globals:
         dossier_images: '/images/'
+    form_themes: ["bootstrap_4_layout.html.twig"]
