--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,10 +39,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: ^/admin, roles: ROLE_ADMIN }
-        #- { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/artiste, roles: ROLE_ARTISTE }
+        #- { path: ^/profil, roles: ROLE_MEMBRE }
         #- { path: ^/admin/QQCHOSECOMMEoeuvres, roles: ROLE_ARTISTE }
         #- { path: ^/profile, roles: IS_AUTHENTIFICATED_FULLY }
 
-    #role_hierarchy:
-#ROLE_ADMIN: ROLE_ARTISTE, ROLE_MEMBRE
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_ARTISTE, ROLE_MEMBRE
