Finalisation du formulaire de contact

--- a/.env
+++ b/.env
@@ -19,7 +19,8 @@ APP_SECRET=5e7ea57ef06edc03108c544e544fafb1
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=gmail://artduntemps@gmail.com:kciyngruoqkwcjna@localhost
+#MAILER_DSN=smtp://@smtp.example.com
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
