--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ MAILER_DSN=gmail://artduntemps@gmail.com:kciyngruoqkwcjna@localhost
 DATABASE_URL="mysql://root:@127.0.0.1:3306/project?serverVersion=10.4.18-MariaDB"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
