Chargement photo user en BDD + timing session

--- a/.env
+++ b/.env
@@ -36,3 +36,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/project?serverVersion=10.4.18-MariaDB
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
