--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,9 @@ security:
             logout:
                 path: app_logout
                 target: app_login
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 28000
                 # where to redirect after logout
                 # target: app_any_route
             
