Vérification email après inscription

--- a/.env
+++ b/.env
@@ -19,7 +19,9 @@ APP_SECRET=5e7ea57ef06edc03108c544e544fafb1
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=gmail://artduntemps@gmail.com:kciyngruoqkwcjna@localhost
+MAILER_DSN=smtp://localhost:1025
+#MAILER_DSN=gmail://contact.mesites@gmail.com@localhost
+#MAILER_DSN=gmail://emilie.delaurent@gmail.com:kciyngruoqkwcjna@localhost
 #MAILER_DSN=smtp://@smtp.example.com
 ###< symfony/mailer ###
 
@@ -34,7 +36,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/project?serverVersion=10.4.18-MariaDB
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+#MAILER_DSN=gmail://contact.mesites@gmail.com:cont@ct4s1tesMily@default
 ###< symfony/google-mailer ###
 
 ###> symfony/lock ###
@@ -42,3 +44,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/project?serverVersion=10.4.18-MariaDB
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=flock
 ###< symfony/lock ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
