--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@popperjs/core": "^2.11.8",
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
@@ -19,7 +20,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "^4.6",
-        "jquery": "^3.6.0",
+        "jquery": "^3.7.1",
         "node-sass": "^6.0.1",
         "popper.js": "^1.16.1",
         "sass-loader": "^11.1.1"
